--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,74 @@ typings/
 
 # next.js build output
 .next
+
+# Outputs
+src/**/*.js
+src/**/*.js.map
+src/**/*.d.ts
+out-tsc
+
+# OS generated files #
+.DS_Store
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# Node Files #
+node_modules
+/bower_components/
+npm-debug.log
+/npm-debug.log.*
+
+# Coverage #
+/coverage/
+/coverage/*
+
+# Typing #
+/src/typings/tsd/
+/typings/
+/tsd_typings/
+
+# Dist #
+/dist
+dist
+/public/__build__/
+/src/*/__build__/
+/__build__/**
+/public/dist/
+/src/*/dist/
+/dist/**
+/.awcache
+.webpack.json
+/compiled/
+dll/
+
+# Doc #
+/doc/
+/documentation/
+
+# IDEs and editors
+.idea/
+*.swp
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+# misc
+/.sass-cache
+/connect.lock
+/libpeerconnection.log
+testem.log
