chore: add contributors generate script

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
         "type": "git",
         "url": "https://github.com/brionmario/gulp-static-seed.git"
     },
+    "scripts": {
+        "contributors:add": "all-contributors add",
+        "contributors:generate": "all-contributors generate"
+    },
     "dependencies": {
         "bootstrap": "4.1.1",
         "font-awesome": "4.7.0",
