--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "gulp-header": "2.0.5",
         "gulp-rename": "1.3.0",
         "gulp-sass": "4.0.1",
+        "gulp-sass-lint": "^1.4.0",
         "gulp-uglify": "3.0.0"
     }
 }
