--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "devDependencies": {
         "all-contributors-cli": "^5.4.0",
         "browser-sync": "2.24.5",
+        "eslint": "^5.3.0",
+        "eslint-config-airbnb": "^17.0.0",
         "gulp": "^3.9.1",
         "gulp-clean-css": "3.9.4",
+        "gulp-eslint": "^5.0.0",
         "gulp-header": "2.0.5",
         "gulp-rename": "1.3.0",
         "gulp-sass": "4.0.1",
