--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -8,5 +8,15 @@
   ],
   "imageSize": 80,
   "commit": true,
-  "contributors": []
+  "contributors": [
+    {
+      "login": "jfmengels",
+      "name": "Jeroen Engels",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/3869412?v=4",
+      "profile": "https://github.com/jfmengels",
+      "contributions": [
+        "doc"
+      ]
+    }
+  ]
 }
