Add @brionmario as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,6 +17,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "brionmario",
+      "name": "Brion Mario",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/25959096?v=4",
+      "profile": "https://www.linkedin.com/in/brion-mario/",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
