--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "minify": "npm run minify:js && npm run minify:css",
     "vendor": "gulp vendor",
     "watch:dev": "gulp watch:dev",
+    "test": "jest",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate"
   },
@@ -57,6 +58,7 @@
     "gulp-rename": "1.3.0",
     "gulp-sass": "4.0.1",
     "gulp-sass-lint": "^1.4.0",
-    "gulp-uglify": "3.0.0"
+    "gulp-uglify": "3.0.0",
+    "jest": "^23.5.0"
   }
 }
