--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "gulp-rename": "1.3.0",
     "gulp-sass": "4.0.1",
     "gulp-sass-lint": "^1.4.0",
-    "gulp-uglify": "3.0.0",
+    "gulp-uglify-es": "^1.0.4",
     "jest": "^23.5.0"
   }
 }
