ci: add test command to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 sudo: false
-language:      node_js
+language: node_js
 node_js:
   - "node"
-install:       npm install
+install: npm install
 script:
-  - npm test
-  - gulp
+  - npm run test
+  - npm run build
 cache:
   directories:
     - node_modules
