--- a/package.json
+++ b/package.json
@@ -1,68 +1,83 @@
 {
-    "title": "Gulp Static Seed by Aparecium Labs",
-    "name": "gulp-static-seed",
-    "version": "0.1.0",
-    "description": "A Gulp starter kit for HTML5 static website development with a congenial build process",
-    "keywords": [
-        "gulp",
-        "css",
-        "sass",
-        "html",
-        "responsive",
-        "apareciumlabs",
-        "seed"
-    ],
-    "homepage": "https://github.com/brionmario/gulp-static-seed",
-    "bugs": {
-        "url": "https://github.com/brionmario/gulp-static-seed/issues",
-        "email": "support@apareciumalabs.com"
-    },
-    "license": "MIT",
-    "author": "Brion Silva",
-    "contributors": [],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/brionmario/gulp-static-seed.git"
-    },
-    "jest": {
-        "coverageDirectory": "./coverage/",
-        "collectCoverage": true
-    },
-    "scripts": {
-        "start": "gulp dev",
-        "build:sass": "gulp css",
-        "build:js": "gulp js",
-        "build": "gulp",
-        "lint:js": "gulp js:lint; exit 0",
-        "lint:sass": "gulp sass:lint",
-        "lint": "npm run lint:js && npm run lint:sass",
-        "minify:css": "gulp css:minify",
-        "minify:js": "gulp js:minify",
-        "minify": "npm run minify:js && npm run minify:css",
-        "vendor": "gulp vendor",
-        "watch:dev": "gulp watch:dev",
-        "test": "jest && codecov",
-        "contributors:add": "all-contributors add",
-        "contributors:generate": "all-contributors generate"
-    },
-    "dependencies": {
-        "bootstrap": "4.1.1",
-        "font-awesome": "4.7.0",
-        "jquery": "3.3.1"
-    },
-    "devDependencies": {
-        "all-contributors-cli": "^5.4.0",
-        "browser-sync": "2.24.5",
-        "eslint": "^5.3.0",
-        "eslint-config-airbnb": "^17.0.0",
-        "gulp": "^3.9.1",
-        "gulp-clean-css": "3.9.4",
-        "gulp-eslint": "^5.0.0",
-        "gulp-header": "2.0.5",
-        "gulp-rename": "1.3.0",
-        "gulp-sass": "4.0.1",
-        "gulp-sass-lint": "^1.4.0",
-        "gulp-uglify-es": "^1.0.4",
-        "jest": "^23.5.0"
+  "title": "Gulp Static Seed by Aparecium Labs",
+  "name": "gulp-static-seed",
+  "version": "0.1.0",
+  "private": true,
+  "description": "A Gulp starter kit for HTML5 static website development with a congenial build process",
+  "homepage": "https://github.com/brionmario/gulp-static-seed#README.md",
+  "bugs": {
+    "url": "https://github.com/brionmario/gulp-static-seed/issues",
+    "email": "opensource@apareciumalabs.com"
+  },
+  "license": "MIT",
+  "author": "Brion Silva",
+  "contributors": [
+    {
+      "name": "Brion Silva",
+      "email": "brion@apareciumlabs.com",
+      "url": "https://github.com/brionmario"
     }
+  ],
+  "engines": {
+    "node": ">=8.9.1 <9.0.0",
+    "yarn": ">=1.3.2 <2.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brionmario/gulp-static-seed"
+  },
+  "keywords": [
+    "gulp",
+    "css",
+    "sass",
+    "html",
+    "responsive",
+    "apareciumlabs",
+    "seed"
+  ],
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
+  },
+  "scripts": {
+    "start": "gulp dev",
+    "build:sass": "gulp css",
+    "build:js": "gulp js",
+    "build": "gulp",
+    "lint:js": "gulp js:lint; exit 0",
+    "lint:sass": "gulp sass:lint",
+    "lint": "npm run lint:js && npm run lint:sass",
+    "minify:css": "gulp css:minify",
+    "minify:js": "gulp js:minify",
+    "minify": "npm run minify:js && npm run minify:css",
+    "vendor": "gulp vendor",
+    "watch:dev": "gulp watch:dev",
+    "test": "jest && codecov",
+    "contributors:add": "all-contributors add",
+    "contributors:generate": "all-contributors generate"
+  },
+  "dependencies": {
+    "bootstrap": "4.1.1",
+    "font-awesome": "4.7.0",
+    "jquery": "3.3.1"
+  },
+  "devDependencies": {
+    "all-contributors-cli": "^5.4.0",
+    "browser-sync": "2.24.5",
+    "del": "^3.0.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-clean-css": "3.9.4",
+    "gulp-eslint": "^5.0.0",
+    "gulp-header": "2.0.5",
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-rename": "1.3.0",
+    "gulp-sass": "4.0.1",
+    "gulp-sass-lint": "^1.4.0",
+    "gulp-uglify-es": "^1.0.4",
+    "jest": "^23.5.0",
+    "run-sequence": "^2.2.1"
+  }
 }
