--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Output
+dist
+.temp
+
+#Vendor packages
+src/vendor
 
 # Optional eslint cache
 .eslintcache
 
-# OS generated files #
+# OS generated files
 .DS_Store
 ehthumbs.db
 Thumbs.db
 
-# Node Files #
+# Node Files
 node_modules
 /bower_components/
 npm-debug.log
@@ -41,6 +41,13 @@ coverage
 
 # Deployment Files
 .netlify
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # misc
 /.sass-cache
