--- a/package.json
+++ b/package.json
@@ -56,28 +56,34 @@
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate"
   },
-  "dependencies": {
-    "bootstrap": "4.1.1",
-    "font-awesome": "4.7.0",
-    "jquery": "3.3.1"
-  },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "all-contributors-cli": "^5.4.0",
     "browser-sync": "2.24.5",
+    "browserify": "^16.2.2",
     "del": "^3.0.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.0.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "3.9.4",
+    "gulp-concat": "^2.6.1",
+    "gulp-css-url-adjuster": "^0.2.3",
     "gulp-eslint": "^5.0.0",
     "gulp-header": "2.0.5",
     "gulp-htmlmin": "^4.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-inject": "^4.3.2",
     "gulp-rename": "1.3.0",
     "gulp-sass": "4.0.1",
     "gulp-sass-lint": "^1.4.0",
-    "gulp-uglify-es": "^1.0.4",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.1",
+    "gulp-util": "^3.0.8",
     "jest": "^23.5.0",
-    "run-sequence": "^2.2.1"
+    "main-bower-files": "^2.13.1",
+    "wiredep": "^4.0.0"
   }
 }
