--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "A Gulp starter kit for HTML5 static website development with a congenial build process",
   "main": "",
   "authors": [
-    "Brion Silva"
+    "Brion Mario"
   ],
   "license": "MIT",
   "keywords": [
