build: fix live file editing issue :bug:

--- a/package.json
+++ b/package.json
@@ -48,12 +48,11 @@
     "clean:temp":  "gulp clean --env=development",
     "clean:dist":  "gulp clean --env=production",
     "clean": "gulp clean --env=all",
-    "gulp": "gulp",
     "gulp-dev-server": "gulp browserSync --base=.temp",
     "lint:scripts": "gulp scripts:lint; exit 0",
     "lint:styles": "gulp styles:lint",
     "lint": "npm run lint:scripts && npm run lint:styles",
-    "server:dev": "npm run build:dev && npm run gulp-dev-server && npm run watch",
+    "server:dev": "npm run build:dev && gulp serve:dev",
     "server:prod": "npm run build:prod && http-server dist -a 192.168.8.101 -o",
     "server": "npm run server:dev",
     "start": "npm run server",
