ci: add bower install scripts to travis config :rocket:

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ matrix:
 before_install:
   - npm install -g npm@5
   - npm install -g codecov
+  - npm install -g bower
+  - bower install
 install:
   - npm install
 script:
