--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "build": "npm run build:dev",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
-    "clean:temp":  "gulp clean --env=development",
-    "clean:dist":  "gulp clean --env=production",
+    "clean:temp": "gulp clean --env=development",
+    "clean:dist": "gulp clean --env=production",
     "clean": "gulp clean --env=all",
     "gulp-dev-server": "gulp browserSync --base=.temp",
     "lint:scripts": "gulp scripts:lint; exit 0",
@@ -66,6 +66,7 @@
     "all-contributors-cli": "^5.4.0",
     "browser-sync": "2.24.5",
     "browserify": "^16.2.2",
+    "codecov": "^3.1.0",
     "del": "^3.0.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.0.0",
