build: add version management configs

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "server": "npm run server:dev",
     "start": "npm run server",
     "test": "jest && codecov",
+    "version": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "watch:dev": "gulp watch",
     "watch": "npm run watch:dev"
   },
