chore: update ownership details in all contributors spec

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,6 +1,6 @@
 {
   "projectName": "gulp-static-seed",
-  "projectOwner": "brionmario",
+  "projectOwner": "apareciumlabs",
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
