chore(npm): modify npm scripts

--- a/package.json
+++ b/package.json
@@ -40,26 +40,27 @@
     "collectCoverage": true
   },
   "scripts": {
-    "build:dev": "npm run clean:temp && gulp build --env=development",
-    "build:prod": "npm run clean:dist && gulp build --env=production",
-    "build": "npm run build:dev",
+    "gulp": "gulp",
+    "build:dev": "npm run clean:temp && npm run gulp build --env=development",
+    "build:prod": "npm run clean:dist && npm run gulp build --env=production",
+    "build": "npm run build:prod",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
-    "clean:temp": "gulp clean --env=development",
-    "clean:dist": "gulp clean --env=production",
-    "clean": "gulp clean --env=all",
-    "gulp-dev-server": "gulp browserSync --base=.temp",
-    "lint:scripts": "gulp scripts:lint; exit 0",
-    "lint:styles": "gulp styles:lint",
+    "clean:temp": "npm run gulp clean --env=development",
+    "clean:dist": "npm run gulp clean --env=production",
+    "clean": "npm run gulp clean --env=all",
+    "gulp-dev-server": "npm run gulp browserSync --base=.temp",
+    "lint:scripts": "npm run gulp scripts:lint; exit 0",
+    "lint:styles": "npm run gulp styles:lint",
     "lint": "npm run lint:scripts && npm run lint:styles",
     "semver": "npm version $(semver $npm_package_version -i $release --preid $preid)",
-    "server:dev": "npm run build:dev && gulp serve:dev",
+    "server:dev": "npm run build:dev && npm run gulp serve:dev",
     "server:prod": "npm run build:prod && http-server dist -a 192.168.8.101 -o",
     "server": "npm run server:dev",
     "start": "npm run server",
-    "test": "jest && codecov",
+    "test": "jest --testPathIgnorePatterns ./src/vendor && codecov",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
-    "watch:dev": "gulp watch",
+    "watch:dev": "npm run gulp watch",
     "watch": "npm run watch:dev",
     "postinstall": "bower install"
   },
