--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,7 @@
   "name": "gulp-static-seed",
   "description": "A Gulp starter kit for HTML5 static website development with a congenial build process",
   "main": "",
-  "authors": [
-    "Brion Mario"
-  ],
+  "authors": ["Brion Mario"],
   "license": "MIT",
   "keywords": [
     "gulp",
@@ -15,21 +13,15 @@
     "apareciumlabs",
     "seed"
   ],
-  "homepage": "https://github.com/apareciumlabs/gulp-static-seed",
+  "homepage": "https://github.com/brionmario/gulp-static-seed",
   "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
+  "ignore": ["**/.*", "node_modules", "bower_components", "test", "tests"],
   "dependencies": {
     "jquery": "^3.3.1",
     "bootstrap": "3.3.4",
     "font-awesome": "~4.4.0"
   },
-  "overrides":{
+  "overrides": {
     "font-awesome": {
       "main": [
         "css/font-awesome.css",
