--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "clean:temp": "gulp clean --env=development",
     "clean:dist": "gulp clean --env=production",
     "clean": "gulp clean --env=all",
-    "gulp-dev-server": "gulp browserSync --base=.temp",
+    "gulp-dev-server": "gulp browserSync --base=temp",
     "lint:scripts": "gulp scripts:lint; exit 0",
     "lint:styles": "gulp styles:lint",
     "lint": "npm run lint:scripts && npm run lint:styles",
