fix(ci): fix ci failing issue :bug:

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "bower": "^1.8.8",
     "browser-sync": "2.24.5",
