refactor(core): rename project name

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "gulp-static-seed",
+  "projectName": "html-seed",
   "projectOwner": "brionmario",
   "repoType": "github",
   "repoHost": "https://github.com",
