--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "title": "Gulp Static Seed by Aparecium Labs",
-  "name": "gulp-static-seed",
+  "title": "HTML Seed by Aparecium Labs",
+  "name": "html-seed",
   "version": "1.0.0-alpha.1",
   "private": true,
-  "description": "A Gulp starter kit for HTML5 static website development with a congenial build process",
-  "homepage": "https://github.com/brionmario/gulp-static-seed#README.md",
+  "description": "A starter kit for HTML5 static website development with a congenial build process",
+  "homepage": "https://github.com/brionmario/html-seed#README.md",
   "bugs": {
-    "url": "https://github.com/brionmario/gulp-static-seed/issues",
+    "url": "https://github.com/brionmario/html-seed/issues",
     "email": "opensource@apareciumalabs.com"
   },
   "license": "MIT",
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/brionmario/gulp-static-seed"
+    "url": "https://github.com/brionmario/html-seed"
   },
   "keywords": [
     "gulp",
