refactor(core): change project name :truck:

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "html-seed",
+  "projectName": "html-starter",
   "projectOwner": "brionmario",
   "repoType": "github",
   "repoHost": "https://github.com",
