--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "title": "HTML Seed by Aparecium Labs",
-  "name": "html-seed",
+  "title": "HTML Starter by Aparecium Labs",
+  "name": "html-starter",
   "version": "1.0.0-alpha.1",
   "private": true,
   "description": "A starter kit for HTML5 static website development with a congenial build process",
-  "homepage": "https://github.com/brionmario/html-seed#README.md",
+  "homepage": "https://github.com/brionmario/html-starter#README.md",
   "bugs": {
-    "url": "https://github.com/brionmario/html-seed/issues",
+    "url": "https://github.com/brionmario/html-starter/issues",
     "email": "opensource@apareciumalabs.com"
   },
   "license": "MIT",
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/brionmario/html-seed"
+    "url": "https://github.com/brionmario/html-starter"
   },
   "keywords": [
     "gulp",
@@ -33,6 +33,7 @@
     "html",
     "responsive",
     "apareciumlabs",
+    "starter",
     "seed"
   ],
   "jest": {
